# livestream-api

./: .gitignore  README.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/auth/: AuthShell.tsx  GoogleButton.tsx
frontend/src/components/clips/: ClipCard.tsx  ClipPlayerModal.tsx  ClipThumbnail.tsx  PostModal.tsx  platformIcons.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx
frontend/src/components/projects/: CreateProjectModal.tsx  NewProjectModal.tsx  ProjectCard.tsx  StatusPill.tsx
frontend/src/components/ui/: Skeleton.tsx  Toaster.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  captions.ts  clipEdits.ts  config.ts  cropPref.ts  demo.ts  format.ts  placeholder.ts  supabase.ts  toast.ts
frontend/src/pages/: ClipEditorPage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SignUpPage.tsx  SocialConnectedPage.tsx
frontend/src/services/: projects.ts
router/: .dockerignore  Dockerfile  pyproject.toml
router/app/: auth.py  aws.py  config.py  logging_config.py  main.py  schemas.py  supabase_client.py  zernio.py
router/app/routes/: __init__.py  clips.py  projects.py  social.py
router/app/workers/: __init__.py  provisioner.py  user_data.py
router/deploy/: Caddyfile  deploy.sh  docker-compose.yml
router/tests/: conftest.py  test_auth.py  test_clips_routes.py  test_projects_routes.py  test_provisioner.py  test_social_routes.py  test_url_validation.py  test_user_data.py
(+7 files in other folders)
