[project]
name = "router"
version = "0.1.0"
description = "Control plane: accepts stream/VOD jobs, spawns clip-worker tasks, serves clip metadata"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.6",
    "supabase>=2.10",
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "moto[ec2]>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
